# GL

./: .clang-format  .gitignore  CMakeLists.txt  config.hpp  todo.md
assets/model/VeronicaPagan/: export.mtl
assets/model/cornel-box/: cornel-box.mtl
assets/model/corner/: corner.mtl
assets/model/diona/: diona.mtl
assets/model/sphere/: imgui.ini
assets/model/sphere-matrix/: sphere-matrix.mtl  sphere-matrix2.mtl
assets/model/three-objs/: cube-sphere-cylinder.mtl
core/: camera.h  engine.h  env.h  light.h  mesh.h  misc.h  model.h  obj.h  shader.h  shader2.h  texture.h
examples/: CMakeLists.txt  config.in.h
examples/3DGI/: README.md
examples/3DGI/reflective-shadow-map/: gi.frag  main.cpp
examples/GGX-BRDF/: brdf.frag  main.cpp
examples/NPR/NPR/: RAEDME.md  main.cpp  npr.frag
examples/SSGI/: README.md
examples/SSGI/SSR/: README.md  SSR.drawio  color-pass.frag  color-pass.vert  main.cpp  ssr-pass.frag
examples/SSGI/SSR/shader/: geometry-pass.vert  light-pass.vert  ssr-pass.vert
examples/SSGI/ssao/: geometry.vert  main.cpp  ssao.frag  ssao.vert
examples/SSR/: README.md  color-pass.frag  color-pass.vert  geometry-pass.frag  geometry-pass.vert  main.cpp  shadow-pass.frag
examples/cube-shadow-mapping/: main.cpp  shader.h
examples/diffuse/: main.cpp
examples/env/: README.md
examples/env/precompute-radiance-transport/: main.cpp
examples/env/precompute-radiance-transport/shader/: prt.frag
examples/env/split-sum-approximate/: env-map.frag  main.cpp
examples/env/split-sum-approximate/shader/: int-brdf.frag  prefilter-env-map.frag
examples/environment-lighting/precompute-radiance-transport/: main.cpp  shader.h  transport_inter_reflect.txt
examples/environment-lighting/split-sum-approximate/: main.cpp  shader.h
examples/environment-lighting/split-sum-approximate/shader/: ibl.frag
examples/materials/: README.md
examples/materials/GGX-BRDF/: README.md  brdf.frag  brdf.vert  main.cpp
examples/materials/GGX-BRDF/shader/: brdf.frag
examples/misc/model-viewer/: README.md  main.cpp
examples/misc/ray-march/: README.md  main.cpp  ray-march.frag
examples/misc/test/: main.cpp
examples/misc/use-assmip/: main.cpp
examples/misc/use-tinyGLTF/: main.cpp
examples/misc/use-tinyGLTF/test-gltf/: test.gltf
examples/model-viewer/: main.cpp
examples/opengl/: README.md
examples/opengl/render-to-cube/: main.cpp
examples/opengl/render-to-texture/: main.cpp
examples/opengl/sky-box/: main.cpp
examples/opengl/uniform-block/: diffuse.vert  main.cpp
examples/opengl/uniform-block/shader/: diffuse.frag
examples/pcss/: depth.frag  main.cpp  pcss.frag  shader.h
examples/precompute-radiance-transport/: main.cpp  prt.vert  shader.h  transport_inter_reflect.txt  transport_shadowed.txt  transport_unshadowed.txt
examples/ray-march/: main.cpp  ray-march.frag  ray-march.vert
examples/reflective-shadow-map/: gen-rsm.frag  gen-rsm.vert  gi.frag  gi.vert  main.cpp
examples/render-to-cube/: main.cpp
examples/render-to-texture/: main.cpp
examples/shadow-mapping/: main.cpp  shader.h  shadow-mapping.vert
examples/shadows/: README.md
examples/shadows/cube-shadow-mapping/: README.md  distance-to-light.vert  main.cpp
examples/shadows/cube-shadow-mapping/shader/: distance-to-light.frag  shadow-mapping.frag
examples/shadows/pcss/: main.cpp  pcss.frag  shader.h
examples/shadows/pcss/shader/: depth.frag  depth.vert  pcss.vert
examples/sky/: main.cpp
examples/sky-box/: main.cpp
examples/split-sum-approximate/: envmap.frag  envmap.vert  main.cpp  shader.h
examples/ssao/: geometry.frag  main.cpp  ssao.frag
examples/uniform-block/: main.cpp
frame/: CMakeLists.txt  README.md  frame-config.in.h  material.h
frame/core/: camera.h  engine.h  env.h  ext-init.h  import-gltf.cpp  import-gltf.h  import-obj.h  light.h  mesh.h  misc.h  opengl-misc.h  rt-object.h  shader.cpp  shader.h  shader2.h  texture.cpp  texture.h  window.h
frame/core/src/: camera.cpp  import-gltf.cpp  import-obj.cpp  mesh.cpp  opengl-misc.cpp  rt-object.cpp  shader.cpp  texture.cpp  window.cpp
frame/ext/: CMakeLists.txt
frame/functions/: axis.h
frame/shader/: GGX-BRDF.glsl  line.frag  line.vert
frame/shader/base/: README.md  base.frag  base.vert
frame/shader/blinn-phong/: blinn-phong.h  blinn-phong.vert
frame/shader/diffuse/: diffuse.h
frame/shader/gltf/: README.md  gltf.frag  gltf.vert
frame/shader/skybox/: sky.h  skybox.h
frame/shader/tex2d-visual/: tex-visual.frag  tex-visual.h
function/skybox/: skybox.h
function/skybox/shader/: sky.frag  sky.h  sky.vert
function/tex2d-visual/: tex2d-visual.h
function/tex2d-visual/shader/: tex-visual.h
functions/: axis.h
model/: untitled.blend
model/cornel-box/: cornel-box.blend
model/corner/: corner.blend
model/cube/: cube.blend  cube.blend1  cube.mtl
model/diona/: diona.blend
model/floor/: floor.blend  floor.mtl
model/gray-floor/: gray-floor.blend  gray-floor.mtl
model/hutao/: hutao.mtl
model/light/: light.blend  light.mtl
model/lucy/: lucy.mtl
model/sphere/: bunny.blend  sphere.blend
model/sphere-matrix/: sphere-matrix.blend  sphere-matrix.blend1  sphere-matrix2.blend
model/square/: sphere.mtl  square.blend  square.mtl
model/three-objs/: cube-sphere-cylinder.blend  cube-sphere-cylinder.blend1  cube-sphere-cylinder.mtl
shader/blinn-phong/: blinn-phong.frag  blinn-phong.h
shader/depth/: depth.frag  depth.h
shader/diffuse/: diffuse.h
shader/lambert/: lambert.frag  lambert.h
shader/skybox/: sky.frag  sky.h  sky.vert  skybox.h
shader/tex2d-visual/: tex-visual.frag  tex-visual.h  tex-visual.vert
